<resources>
    <string name="app_name">Daily Gardener</string>
    <string name="title_home">Home</string>
    <string name="title_plants">Plants</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_plants">Plants</string>
    <string name="title_activity_history">history</string>
</resources>
