<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_plants"
            android:icon="@android:drawable/btn_star"
            android:title="@string/title_plants"/>
    <item
            android:id="@+id/navigation_history"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/title_history"/>

    <item
            android:id="@+id/navigation_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_notifications"/>

    <item
            android:id="@+id/navigation_settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/title_settings"/>
</menu>
